force-app/main/default/objects/hed__Plan_Requirement__c/fields/Instance_Of__c.field-meta.xml
<CustomField>
    <fullName>Instance_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If set, must be a container. Returns the referenced container instead of this one. This container also must have no children.</description>
    <inlineHelpText>If set, must be a container. Returns the referenced container instead of this one. This container also must have no children.</inlineHelpText>
    <label>Instance Of</label>
    <referenceTo>hed__Plan_Requirement__c</referenceTo>
    <relationshipLabel>Instanced Requirements</relationshipLabel>
    <relationshipName>Instances</relationshipName>
    <type>Lookup</type>
</CustomField>