force-app/main/default/objects/hed__Plan_Requirement__c/fields/Is_Logical_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Is_Logical_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if child requirements are just being separated for e.g. an OR statement. Not a separate sub-section of requirements.</description>
    <inlineHelpText>True if child requirements are just being separated for e.g. an OR statement. Not a separate sub-section of requirements.</inlineHelpText>
    <label>Is Logical Grouping</label>
    <type>Checkbox</type>
</CustomField>