force-app/main/default/objects/hed__Plan_Requirement__c/fields/Is_Template__c.field-meta.xml
<CustomField>
    <fullName>Is_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, requirement must be a container and parent must be program plan. Use the template lookup field to reference this group.</description>
    <inlineHelpText>If true, requirement must be a container and parent must be program plan. Use the template lookup field to reference this group.</inlineHelpText>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>