force-app/main/default/objects/hed__Plan_Requirement__c/fields/Level_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Level_Requirement__c</fullName>
    <description>Commonly a subject requires a level requirement e.g. HORT 300... so in that case, set to 300 - completion will do a &gt; check. So if 300 &amp; 400 are required, just use 300.</description>
    <inlineHelpText>Commonly a subject requires a level requirement e.g. HORT 300... so in that case, set to 300 - completion will do a &gt; check. So if 300 &amp; 400 are required, just use 300.</inlineHelpText>
    <label>Level Requirement</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>