force-app/main/default/objects/hed__Plan_Requirement__c/fields/Level_Requirement_Max__c.field-meta.xml
<CustomField>
    <fullName>Level_Requirement_Max__c</fullName>
    <description>Caps the level requirement if e.g. ONLY 300 is required, set this to 399.</description>
    <inlineHelpText>Caps the level requirement if e.g. ONLY 300 is required, set this to 399.</inlineHelpText>
    <label>Level Requirement Max</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>