force-app/main/default/objects/hed__Plan_Requirement__c/fields/Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Long_Description__c</fullName>
    <description>HTML / Text body describing a requirement. Useful for describing logical groupings or detail for general requirements.</description>
    <inlineHelpText>HTML / Text body describing a requirement. Useful for describing logical groupings or detail for general requirements.</inlineHelpText>
    <label>Long Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>