force-app/main/default/objects/hed__Plan_Requirement__c/fields/Nonstandard_Container__c.field-meta.xml
<CustomField>
    <fullName>Nonstandard_Container__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, use the Long Description field to describe. This is commonly useful for e.g. &quot;Upper Division Courses&quot;.</description>
    <inlineHelpText>If true, use the Long Description field to describe. This is commonly useful for e.g. &quot;Upper Division Courses&quot;.</inlineHelpText>
    <label>Nonstandard Container</label>
    <type>Checkbox</type>
</CustomField>