force-app/main/default/objects/hed__Plan_Requirement__c/fields/Required_Amount__c.field-meta.xml
<CustomField>
    <fullName>Required_Amount__c</fullName>
    <description>If a container is of category &quot;Some&quot; - how many child requirements are needed? Or how many credit requirements?</description>
    <inlineHelpText>If a container is of category &quot;Some&quot; - how many child requirements are needed? Or how many credit requirements?</inlineHelpText>
    <label>Required Amount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>