force-app/main/default/objects/hed__Plan_Requirement__c/fields/Requires_All_Child_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Requires_All_Child_Reqs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, all child requirements must be met. If false, look to the Required Amount field.</description>
    <inlineHelpText>If true, all child requirements must be met. If false, look to the Required Amount field.</inlineHelpText>
    <label>Requires All Child Reqs</label>
    <type>Checkbox</type>
</CustomField>