force-app/main/default/objects/hed__Plan_Requirement__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The subject code of a subject requirement.</description>
    <inlineHelpText>The subject code of a subject requirement.</inlineHelpText>
    <label>Subject</label>
    <length>6</length>
    <type>Text</type>
</CustomField>