force-app/main/default/objects/hed__Plan_Requirement__c/fields/Variable_Credit_Max__c.field-meta.xml
<CustomField>
    <fullName>Variable_Credit_Max__c</fullName>
    <description>If class has variable credits, this is the max.</description>
    <inlineHelpText>If class has variable credits, this is the max.</inlineHelpText>
    <label>Variable Credit Max</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>