force-app/main/default/objects/hed__Plan_Requirement__c/recordTypes/AUCC_Requirement.recordType-meta.xml
<RecordType>
    <fullName>AUCC_Requirement</fullName>
    <active>true</active>
    <description>AUCC Course Set - Just Need the Credits</description>
    <label>AUCC Requirement</label>
</RecordType>