force-app/main/default/objects/hed__Plan_Requirement__c/recordTypes/Course_Requirement.recordType-meta.xml
<RecordType>
    <fullName>Course_Requirement</fullName>
    <active>true</active>
    <description>Requirement is an individual course.</description>
    <label>Course Requirement</label>
</RecordType>