force-app/main/default/objects/hed__Plan_Requirement__c/recordTypes/Generic_Requirement.recordType-meta.xml
<RecordType>
    <fullName>Generic_Requirement</fullName>
    <active>true</active>
    <description>e.g. &quot;General Electives&quot; - Add some HTML to Long Description to describe it.</description>
    <label>Generic Requirement</label>
</RecordType>