force-app/main/default/objects/hed__Plan_Requirement__c/recordTypes/Requirement_Container.recordType-meta.xml
<RecordType>
    <fullName>Requirement_Container</fullName>
    <active>true</active>
    <description>e.g. a set of Directed Elective coursework or an &quot;Either Or&quot; pair of courses</description>
    <label>Requirement Container</label>
</RecordType>