force-app/main/default/objects/hed__Plan_Requirement__c/recordTypes/Subject_Requirement.recordType-meta.xml
<RecordType>
    <fullName>Subject_Requirement</fullName>
    <active>true</active>
    <description>Requirement is a # of credits from a subject area.</description>
    <label>Subject Requirement</label>
</RecordType>