force-app/main/default/objects/hed__Plan_Requirement__c/recordTypes/Template_Instance.recordType-meta.xml
<RecordType>
    <fullName>Template_Instance</fullName>
    <active>true</active>
    <description>Instance of a Container Template</description>
    <label>Template Instance</label>
</RecordType>